---
config:
  layout: elk
  theme: mc
---
classDiagram
direction TB
    class Personaje {
	    -float vidaMax
	    -float salud
	    -float ataque
	    -int nivel
	    +Personaje()
	    +Personaje(float, float, float, int)
	    +getVidaMax() float
	    +setVidaMax(float) void
	    +getSalud() float
	    +setSalud(float) void
	    +getAtaque() float
	    +setAtaque(float) void
	    +getNivel() int
	    +setNivel(int) void
	    +porcentajeSalud() int
	    +imprimeBarra() void
	    +calculaAtaque(Personaje&) int
	    +recibeAtaque(int) void
	    +atacar(Personaje&) void
	    +imprime() void
    }

    class Guerrero {
	    -int fuerza
	    +Guerrero()
	    +Guerrero(float, float, float, int, int)
	    +getFuerza() int
	    +setFuerza(int) void
	    +calculaAtaque(Personaje&) int
	    +recibeAtaque(int) void
	    +imprime() void
    }

    class Caballero {
	    -float agilidad
	    -int escudo
	    +Caballero()
	    +Caballero(float, float, float, int, float, int)
	    +getAgilidad() float
	    +setAgilidad(float) void
	    +getEscudo() int
	    +setEscudo(int) void
	    +calculaAtaque(Personaje&) int
	    +recibeAtaque(int) void
	    +imprime() void
    }

    class Hechicero {
	    -float magia
	    +Hechicero()
	    +Hechicero(float, float, float, int, float)
	    +getMagia() float
	    +setMagia(float) void
	    +calculaAtaque(Personaje&) int
	    +recibeAtaque(int) void
	    +imprime() void
    }

    Personaje <|-- Guerrero
    Personaje <|-- Caballero
    Personaje <|-- Hechicero
